--- a/public/assets/common/css/source/custom.css
+++ b/public/assets/common/css/source/custom.css
@@ -271,3 +271,25 @@ nav.top-submenu, .top-submenu {
 .single-page-block .single-page-block-inner {
 	padding: 40px;
 }
+
+.salv-masonry[data-columns]::before {
+	content: '3 .col-md-4';
+}
+
+@media screen and (max-width: 640px){
+	.salv-masonry[data-columns]::before {
+		content: '1 .col-xs-12';
+	}
+}
+
+@media screen and (min-width: 640px) and (max-width: 991px) {
+	.salv-masonry[data-columns]::before {
+		content: '2 .col-sm-6';
+	}
+}
+
+@media screen and (min-width: 991px) {
+	.salv-masonry[data-columns]::before {
+		content: '3 .col-md-4';
+	}
+}
