--- a/public/views/main-menu.html
+++ b/public/views/main-menu.html
@@ -1,41 +1,102 @@
 <div ng-controller="permissionsController">
-    <div class="panel-group">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <div class="row">
-                    <div class="col-xs-6">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#main_menu" id="main_menu_link">Главное меню</a>
-                        </h4>
-                    </div>
-                    <div class="col-xs-3">
-                        Права:
-                        <span id="role_name">{{player.Role.name}}</span>
-                    </div>
-                    <div class="col-xs-3">
-                        Игрок:
-                        <span id="player_name">{{player.name}}</span>
+    <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
+        <div class="logo-container">
+            <a href="/views/user_personage_manager.html?id={{player.id}}" class="logo">
+                <h1>ЭРИЛОН</h1>
+            </a>
+        </div>
+        <div class="left-menu-inner scroll-pane">
+            <ul class="left-menu-list left-menu-list-root list-unstyled">
+                <li>
+                    <a class="left-menu-link" href="/views/races/race_manager.html" >
+                        <i class="left-menu-link-icon fa fa-users"><!-- --></i>
+                        Расы
+                    </a>
+                </li>
+                <li>
+                    <a class="left-menu-link" href="/views/attributes/attribute_manager.html">
+                        <i class="left-menu-link-icon fa  fa-diamond"><!-- --></i>
+                        Атрибуты
+                    </a>
+                </li>
+                <li>
+                    <a class="left-menu-link" href="/views/merits/merit_manager.html">
+                        <i class="left-menu-link-icon fa fa-smile-o"><!-- --></i>
+                        Достоинства
+                    </a>
+                </li>
+                <li>
+                    <a class="left-menu-link" href="/views/inherents/inherent_manager.html">
+                        <i class="left-menu-link-icon fa fa-american-sign-language-interpreting"><!-- --></i>
+                        Врожденные особенности
+                    </a>
+                </li>
+                <li>
+                    <a class="left-menu-link" href="/views/flaws/flaw_manager.html">
+                        <i class="left-menu-link-icon fa fa-meh-o"><!-- --></i>
+                        Недостатки
+                    </a>
+                </li>
+                <li>
+                    <a class="left-menu-link" href="/views/attached_skills/attached_skills_manager.html">
+                        <i class="left-menu-link-icon fa fa-asterisk"><!-- --></i>
+                        Прикрепленные навыки
+                    </a>
+                </li>
+                <li>
+                    <a class="left-menu-link" href="/views/trigger_skills/trigger_skills_manager.html">
+                        <i class="left-menu-link-icon icmn-stack3"><!-- --></i>
+                        Тригерные навыки
+                    </a>
+                </li>
+                <li>
+                    <a class="left-menu-link" href="/views/spells/spells_manager.html">
+                        <i class="left-menu-link-icon fa fa-fire"><!-- --></i>
+                        Заклинания
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <nav class="top-menu" ng-class="{'hidden-top-menu': hideTopMenu}">
+        <div class="menu-icon-container hidden-md-up">
+            <div class="animate-menu-button left-menu-toggle">
+                <div><!-- --></div>
+            </div>
+        </div>
+        <div class="menu">
+            <div class="menu-user-block">
+                <div class="dropdown dropdown-avatar">
+                    <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                        <span class="user-name">Игрок: <strong>{{player.name}}</strong></span>
+                        <span class="avatar" href="profile.html">
+                        <img src="/assets/common/img/temp/avatars/4.jpg" alt="Alternative text to the image">
+                    </span>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
+                        <a class="dropdown-item" href="profile.html"><i class="dropdown-icon icmn-user"></i> Профиль</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/views/user_personage_manager.html?id={{player.id}}"><i class="dropdown-icon icmn-circle-right"></i> Мои персонажи</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/" ng-click="deleteUserCookie()"><i class="dropdown-icon icmn-exit"></i> Сменить персонажа</a>
+                        <div class="dropdown-divider" ng-show="hasManagePermissionsAccess()"></div>
+                        <a class="dropdown-item" href="/" ng-click="deleteUserCookie()" ng-show="hasManagePermissionsAccess()"><i class="dropdown-icon icmn-cog2"></i> Управление доступом</a>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="menu-info-block">
+                <div class="left">
+                    <div class="menu-info-block">
+                        <div class="example-buy-btn hidden-xs-down">
+                            <div class="btn expir btn-success-outline btn-rounded">
+                                Права: {{player.Role.name}}
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div id="main_menu" class="panel-collapse collapse">
-                <ul class="list-group">
-                    <li class="list-group-item"><a id="change_user" href="/" ng-click="deleteUserCookie()">Сменить юзера</a></li>
-                    <li class="list-group-item" ng-show="hasManagePermissionsAccess()"><a id="permissions_mm"
-                                                                                          href="/views/permissions/managePermissions.html">Управление доступом</a></li>
-                    <li class="list-group-item"><a id="races_mm" href="/views/races/race_manager.html">Расы</a></li>
-                    <li class="list-group-item"><a id="attributes_mm" href="/views/attributes/attribute_manager.html">Атрибуты</a></li>
-                    <li class="list-group-item"><a id="merits_mm" href="/views/merits/merit_manager.html">Достоинства</a></li>
-                    <li class="list-group-item"><a id="inherents_mm" href="/views/inherents/inherent_manager.html">Врожденные особенности</a></li>
-                    <li class="list-group-item"><a id="flaws_mm" href="/views/flaws/flaw_manager.html">Недостатки</a></li>
-                    <li class="list-group-item"><a id="attached_skills_mm" href="/views/attached_skills/attached_skills_manager.html">Прикрепленные
-                        навыки</a></li>
-                    <li class="list-group-item"><a id="trigger_skills_mm" href="/views/trigger_skills/trigger_skills_manager.html">Тригерные навыки</a></li>
-                    <li class="list-group-item"><a id="spells_mm" href="/views/spells/spells_manager.html">Заклинания</a></li>
-                    <li class="list-group-item"><a id="my_personages" href="/views/user_personage_manager.html?id={{player.id}}">Мои
-                        персонажи</a></li>
-                </ul>
-            </div>
+
         </div>
-    </div>
+    </nav>
 </div>
