--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Выбрать персонажа</title>
+    <title>Персонажи</title>
 
     <link href="/assets/common/img/favicon.144x144.png" rel="apple-touch-icon" type="image/png" sizes="144x144">
     <link href="/assets/common/img/favicon.114x114.png" rel="apple-touch-icon" type="image/png" sizes="114x114">
@@ -101,108 +101,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.10/ngStorage.min.js"></script>
     <script src="permissions/permissions.js"></script>
+    <script src="personage_manager.js"></script>
+    <script src="permissions/check_player_permissions.js"></script>
 </head>
 <body class="theme-default menu-top menu-static theme-dark" ng-app="personageManagerApp">
 <div class="boxed-container" ng-controller="permissionsController">
-    <nav class="left-menu" left-menu ng-class="{'hidden-left-menu': hideLeftMenu}">
-        <div class="logo-container">
-            <a href="profile.html" class="logo">
-                <h1>ЭРИЛОН</h1>
-            </a>
-        </div>
-        <div class="left-menu-inner scroll-pane">
-            <ul class="left-menu-list left-menu-list-root list-unstyled">
-                <li>
-                    <a class="left-menu-link" href="race.html" >
-                        <i class="left-menu-link-icon fa fa-users"><!-- --></i>
-                        Расы
-                    </a>
-                </li>
-                <li>
-                    <a class="left-menu-link" href="attributes.html">
-                        <i class="left-menu-link-icon fa  fa-diamond"><!-- --></i>
-                        Атрибуты
-                    </a>
-                </li>
-                <li>
-                    <a class="left-menu-link" href="dignity.html">
-                        <i class="left-menu-link-icon fa fa-smile-o"><!-- --></i>
-                        Достоинства
-                    </a>
-                </li>
-                <li>
-                    <a class="left-menu-link" href="congenital-features.html">
-                        <i class="left-menu-link-icon fa fa-american-sign-language-interpreting"><!-- --></i>
-                        Врожденные особенности
-                    </a>
-                </li>
-                <li>
-                    <a class="left-menu-link" href="disadvantages.html">
-                        <i class="left-menu-link-icon fa fa-meh-o"><!-- --></i>
-                        Недостатки
-                    </a>
-                </li>
-                <li>
-                    <a class="left-menu-link" href="attached-skills.html">
-                        <i class="left-menu-link-icon fa fa-asterisk"><!-- --></i>
-                        Прикрепленные навыки
-                    </a>
-                </li>
-                <li>
-                    <a class="left-menu-link" href="trigger-skills.html">
-                        <i class="left-menu-link-icon icmn-stack3"><!-- --></i>
-                        Тригерные навыки
-                    </a>
-                </li>
-                <li>
-                    <a class="left-menu-link" href="spells.html">
-                        <i class="left-menu-link-icon fa fa-fire"><!-- --></i>
-                        Заклинания
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <nav class="top-menu" ng-class="{'hidden-top-menu': hideTopMenu}">
-        <div class="menu-icon-container hidden-md-up">
-            <div class="animate-menu-button left-menu-toggle">
-                <div><!-- --></div>
-            </div>
-        </div>
-        <div class="menu">
-            <div class="menu-user-block">
-                <div class="dropdown dropdown-avatar">
-                    <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        <span class="user-name">Игрок: <strong>Ligar</strong></span>
-                        <span class="avatar" href="profile.html">
-                        <img src="/assets/common/img/temp/avatars/4.jpg" alt="Alternative text to the image">
-                    </span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="" role="menu">
-                        <a class="dropdown-item" href="profile.html"><i class="dropdown-icon icmn-user"></i> Профиль</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="old_personage_manager.html"><i class="dropdown-icon icmn-circle-right"></i> Мои персонажи</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="login.html"><i class="dropdown-icon icmn-exit"></i> Сменить персонажа</a>
-                    </ul>
-                </div>
-            </div>
-            <div class="menu-info-block">
-                <div class="left">
-                    <div class="menu-info-block">
-                        <div class="example-buy-btn hidden-xs-down">
-                            <div class="btn rights btn-success-outline btn-rounded">
-                                Игрок: {{player.name}}
-                            </div>
-                            <div class="btn expir btn-success-outline btn-rounded">
-                                Права: {{player.Role.name}}
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
+
+    <div data-ng-include data-src="'main-menu.html'"></div>
 
     <section class="page-content">
         <div class="page-content-inner">
@@ -217,35 +122,37 @@
                             </div>
                             <div class="panel-body">
                                 <br>
-                                <form class="" name="createPersonageForm">
+                                <form class="" name="createPersonageForm" id="createPersonageForm">
                                     <div class="row">
                                         <div class="col-lg-3">
                                             <div class="form-group">
                                                 <label class="form-label" for="name">Имя</label>
-                                                <input class="form-control form-control-rounded" placeholder="Shmublon" id="name" ng-model="name" type="text" required>
+                                                <input class="form-control form-control-rounded" name="personageName"
+                                                       placeholder="Имя персонажа..." id="name" ng-model="name" type="text" required>
                                             </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="form-group" ng-click="selectRefresh()">
-                                                <label for="race_id">Выбрать расу</label>
+                                                <label for="race_id">Раса</label>
 
-                                                <select class="selectpicker form-control form-control-rounded"
-                                                        ng-model="race_id" id="race_id" ng-options="race.id as race.name for race in races"
-                                                        required>
+                                                <select class="selectpicker form-control form-control-rounded" name="race"
+                                                        ng-model="race_id" id="race_id" ng-options="race.id as race.name for race in races" required>
                                                     <option style="display:none" value="">Выберите расу...</option>
                                                 </select>
                                             </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="form-group">
-                                                <label class="form-label" for="l81">Очки опыта</label>
-                                                <input class="form-control form-control-rounded" id="l81" min="0" type="number" required>
+                                                <label class="form-label" for="experience" >Очки опыта</label>
+                                                <input class="form-control form-control-rounded" id="experience" name="experience" min="0" type="number" required>
                                             </div>
                                         </div>
                                         <div class="col-lg-3">
                                             <div class="form-group">
-                                                <label class="form-label" for="">&nbsp;</label><br>
-                                                <button type="button" class="btn btn-rounded btn-block btn-info">Добавить</button>
+                                                <label class="form-label" for="createPersonageButton">&nbsp;</label><br>
+                                                <button type="submit" id="createPersonageButton" class="btn btn-rounded btn-block btn-info"
+                                                        ng-disabled="createPersonageForm.$invalid"
+                                                        ng-click="createPersonage()">Создать</button>
                                             </div>
                                         </div>
                                     </div>
@@ -306,178 +213,6 @@
 
 
         </div>
-
-        <!-- Page Scripts -->
-        <script>
-
-            var app = angular.module("personageManagerApp", ['ngStorage']);
-
-            $('.icons-block div').each(function(){
-                $(this).tooltip({
-                    title: $(this).find('.tooltips').attr('title')
-                });
-            });
-
-
-            $('.editable').editableTableWidget();
-
-            app.controller("addPersonageController", function ($scope, $http, $window, $q, $localStorage) {
-                $scope.loader = false;
-
-                $scope.selectRefresh = function () {
-                    $('select').selectpicker('refresh');
-                };
-
-                $scope.createPersonage = function () {
-                    $scope.loader = true;
-
-                    function success(data) {
-                        $window.location.href = '/views/personage_logic/create_personage.html?id=' + data[0];
-                    }
-
-                    var personage = $q.defer();
-                    var raceAttributeAllPromise = $q.defer();
-                    var raceMeritAllPromise = $q.defer();
-                    var raceFlawAllPromise = $q.defer();
-                    var defaultAttachedSkillAllPromise = $q.defer();
-
-                    $q.all([personage.promise, raceAttributeAllPromise.promise,
-                        raceMeritAllPromise.promise, raceFlawAllPromise.promise,
-                        defaultAttachedSkillAllPromise.promise])
-                        .then(success);
-
-
-                    $http.post('/personages', {
-                        name: $scope.name,
-                        race_id: $scope.race_id,
-                        player_id: $localStorage.playerId,
-                        age: 0,
-                        max_age: 0,
-                        experience: $scope.experience,
-                        generated: false
-                    }).success(function (result) {
-
-                        var raceAttributesByRaceId = $q.defer();
-                        $http.get('/raceAttributesByRaceId/' + result.personage.RaceId).success(function (results) {
-                            raceAttributesByRaceId.resolve(results.raceAttributes);
-                        });
-
-                        $q.all([raceAttributesByRaceId.promise]).then(function (raceAttributes) {
-                            var raceAttributePromises = [];
-                            for (var i = 0; i < raceAttributes[0].length; i++) {
-                                raceAttributePromises.push($http.post('/personageAttributes', {
-                                    personage_id: result.personage.id,
-                                    attribute_id: raceAttributes[0][i].AttributeId,
-                                    value: 1
-                                }));
-                            }
-
-                            $q.all(raceAttributePromises).then(function () {
-                                raceAttributeAllPromise.resolve();
-                            });
-                        });
-
-                        var raceMeritsByRaceId = $q.defer();
-                        $http.get('/raceMeritsByRaceId/' + result.personage.RaceId).success(function (results) {
-                            raceMeritsByRaceId.resolve(results.raceMerits);
-                        });
-
-                        $q.all([raceMeritsByRaceId.promise]).then(function (raceMerits) {
-                            var raceMeritPromises = [];
-                            for (var i = 0; i < raceMerits[0].length; i++) {
-                                raceMeritPromises.push($http.post('/personageMerits', {
-                                    personage_id: result.personage.id,
-                                    merit_id: raceMerits[0][i].MeritId,
-                                    unremovable: true
-                                }));
-                            }
-
-                            $q.all(raceMeritPromises).then(function () {
-                                raceMeritAllPromise.resolve();
-                            });
-                        });
-
-                        var raceFlawsByRaceId = $q.defer();
-                        $http.get('/raceFlawsByRaceId/' + result.personage.RaceId).success(function (results) {
-                            raceFlawsByRaceId.resolve(results.raceFlaws);
-                        });
-
-                        $q.all([raceFlawsByRaceId.promise]).then(function (raceFlaws) {
-                            var raceFlawPromises = [];
-                            for (var i = 0; i < raceFlaws[0].length; i++) {
-                                raceFlawPromises.push($http.post('/personageFlaws', {
-                                    personage_id: result.personage.id,
-                                    flaw_id: raceFlaws[0][i].FlawId,
-                                    personage_race_default: true
-                                }));
-                            }
-
-                            $q.all(raceFlawPromises).then(function () {
-                                raceFlawAllPromise.resolve();
-                            });
-                        });
-
-                        var attachedSkills = $q.defer();
-
-                        $http.get('/attachedSkills/').success(function (results) {
-                            attachedSkills.resolve(results.attachedSkills);
-                        });
-
-                        $q.all([attachedSkills.promise]).then(function (attachedSkills) {
-                            var defaultAttachedSkillPromises = [];
-                            angular.forEach(attachedSkills[0], function (attachedSkill) {
-                                if (attachedSkill.default_skill) {
-                                    defaultAttachedSkillPromises.push($http.post('/personageAttachedSkills', {
-                                        personage_id: result.personage.id,
-                                        attachedSkill_id: attachedSkill.id,
-                                        value: 0
-                                    }));
-                                }
-                            });
-
-                            $q.all(defaultAttachedSkillPromises).then(function () {
-                                defaultAttachedSkillAllPromise.resolve();
-                                console.log('attached skills done');
-                            });
-                        });
-                        personage.resolve(result.personage.id);
-                    });
-                };
-
-                $http.get('/races').success(function (data) {
-                    $scope.races = data.races;
-                });
-            });
-
-            app.controller("personageListController", function ($scope, $http, $localStorage) {
-
-                $scope.showMyPersonages = function () {
-                    $scope.loader = true;
-                    $http.get('/personagesByPlayerId/' + $localStorage.playerId).success(function (data) {
-                        $scope.personages = data.personages;
-                        $scope.loader = false;
-                    });
-                };
-
-                $scope.showAllPersonages = function () {
-                    $scope.loader = true;
-                    $http.get('/personages').success(function (data) {
-                        $scope.personages = data.personages;
-                        $scope.loader = false;
-                    });
-                };
-
-                $scope.showMyPersonages();
-
-                $scope.deletePersonage = function (id) {
-                    $http.delete('/personages/' + id).success(function (data) {
-                        location.reload();
-                    });
-                };
-            });
-        </script>
-        <script src="/views/permissions/check_player_permissions.js"></script>
-        <!-- End Page Scripts -->
     </section>
 
 </div>
