--- a/public/assets/common/css/source/custom.css
+++ b/public/assets/common/css/source/custom.css
@@ -272,24 +272,18 @@ nav.top-submenu, .top-submenu {
 	padding: 40px;
 }
 
-.salv-masonry[data-columns]::before {
-	content: '3 .col-md-4';
+*, *:before, *:after {box-sizing:  border-box !important;}
+
+.masonry {
+	-moz-column-width: 20em;
+	-webkit-column-width: 20em;
+	-moz-column-gap: .5em;
+	-webkit-column-gap: .5em;
 }
 
-@media screen and (max-width: 640px){
-	.salv-masonry[data-columns]::before {
-		content: '1 .col-xs-12';
-	}
-}
-
-@media screen and (min-width: 640px) and (max-width: 991px) {
-	.salv-masonry[data-columns]::before {
-		content: '2 .col-sm-6';
-	}
-}
-
-@media screen and (min-width: 991px) {
-	.salv-masonry[data-columns]::before {
-		content: '3 .col-md-4';
-	}
+.panel {
+	display: inline-block;
+	margin:  .5em;
+	padding:  0;
+	width:98%;
 }
